deprecation cleanup